[project]
name = "simple_lan_scanner"
version = "0.2.0b1"
description = "A Python LAN scanning tool that uses nmap to discover devices on the local network"
authors = [
    {name = "Simple LAN Scanner Contributors"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["network", "scanner", "nmap", "lan", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking :: Monitoring",
]

[project.optional-dependencies]
cli = ["click >=8.1"]
test = [
    "pytest >=7.0",
    "pytest-mock >=3.10",
    "pytest-cov >=4.0",
]

[project.scripts]
lan-scan = "simple_scanner.cli:app"